[Extractor] Open the DB in ReadWrite mode from the beginning

The open mode can not be changed later, open it read-write.

BUG: 515918